recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: value Steps
	var etape:Int=Steps
                      ^